--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "objects-properties-only",
+  "name": "remove-methods",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tarranjones/object-properties-only.git"
+    "url": "git+https://github.com/tarranjones/remove-methods.git"
   },
   "keywords": [
     "remove",
@@ -17,22 +17,22 @@
     "prop",
     "properties",
     "prototype",
-    "methods",
+    "method",
+    "function",
     "object"
   ],
   "author": "Tarran Jones <tarrandavidjones@gmail.com> (http://tarranjones.com)",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/tarranjones/object-properties-only/issues"
+    "url": "https://github.com/tarranjones/remove-methods/issues"
   },
-  "homepage": "https://github.com/tarranjones/object-properties-only#readme",
+  "homepage": "https://github.com/tarranjones/remove-methods#readme",
   "devDependencies": {
     "ava": "^0.17.0"
   },
   "dependencies": {
     "is-array": "^1.0.1",
     "is-fn": "^1.0.0",
-    "is-obj": "^1.0.1",
-    "is-plain-obj": "^1.1.0"
+    "is-obj": "^1.0.1"
   }
 }
