--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "is-array": "^1.0.1",
     "is-fn": "^1.0.0",
-    "is-obj": "^1.0.1"
+    "is-obj": "^1.0.1",
+    "is-plain-obj": "^1.1.0"
   }
 }
